2011-04-06  Sam Steingold  <sds@gnu.org>

	fix bug#3182597: WRITE-BYTE-SEQUENCE :no-hang t is only for byte vectors
	* sequence.d (WRITE-BYTE-SEQUENCE): implement "persev !=
	persev_full" for sequences other than (VECTOR (UNSIGNED-BYTE 8))

2011-04-06  Sam Steingold  <sds@gnu.org>

	* sequence.d (interactive_no_hang): new function
	(READ-BYTE-SEQUENCE, WRITE-BYTE-SEQUENCE): use it

2011-04-06  Sam Steingold  <sds@gnu.org>

	* unixaux.d (fd_read): revert the 2008-12-30 patch which closed
	the fd on ECONNRESET without marking the lisp stream as closed,
	thus leading to EBADF when the stream was closed

2011-04-05  Bruno Haible  <bruno@clisp.org>

	Tweak last two changes.
	* lispbibl.d (GENERATIONAL_GC): Add more comments.
	* spvw.d (SIGSEGV_FAULT_ADDRESS_ALIGNMENT): Define fallback.
	* spvw_fault.d (handle_fault): Simplify use of
	SIGSEGV_FAULT_ADDRESS_ALIGNMENT.

2011-04-04  Sam Steingold  <sds@gnu.org>

	* spvw_fault.d (handle_fault): fix last patch to restore support
	to libsigsegv-2.9 and earlier
	* lispbibl.d (GENERATIONAL_GC): ditto

2011-04-03  Bruno Haible  <bruno@clisp.org>

	Support for generational GC on Linux/S390.
	* configure (SIGSEGV): Recommend libsigsegv-2.10.
	* lispbibl.d (GENERATIONAL_GC): Consider also
	SIGSEGV_FAULT_ADDRESS_ALIGNMENT.
	* spvw_fault.d (handle_fault): Likewise.
	Reported by Christoph Egger <christoph@debian.org>.

2011-03-31  Sam Steingold  <sds@gnu.org>

	fix bug#1731469: loop expansion: spurious LET twice
	* loop.lisp (destructure): warn on destructuring empty patterns
	(expand-loop): do not destructure empty patterns and bind useless
	variables; this makes macroexpansion smaller but does not affect
	compiled code

2011-03-29  Sam Steingold  <sds@gnu.org>

	fix bug#3258485: HANDLER-BIND: no CONSTANTLY as a handler
	* compiler.lisp (insert-combined-LAPs): we have HANDLER-BEGIN&PUSH
	but not HANDLER-BEGIN, so insert a (PUSH)+(POP) after
	HANDLER-BEGIN which is not followed by a (PUSH)

2011-03-29  Sam Steingold  <sds@gnu.org>
